--- a/HealthLife/src/app/Cliente/detalle-plan/detalle-plan.component.html
+++ b/HealthLife/src/app/Cliente/detalle-plan/detalle-plan.component.html
@@ -1,8 +1,8 @@
 <body>
 
-    <div class="boton-regresar">
+    <!--<div class="boton-regresar">
         <input type="submit" value="Volver" class="btn-Volver" id="iniciar"> 
-    </div>
+    </div>-->
 
     <div class="cabecera-plan">
         <div class="portada-curso">
