--- a/HealthLife/src/app/Cliente/dashboard/dashboard.component.html
+++ b/HealthLife/src/app/Cliente/dashboard/dashboard.component.html
@@ -41,7 +41,7 @@
                     <h3>{{nomUsuario}}<br/><span>{{rolUsuario}}</span></h3>
                     <ul>
                         <li (click)="cambiarIndice(7)"><fa-icon [icon]="faUserPerfil"></fa-icon><a routerLink="/perfil">Mi perfil</a></li>
-                        <li><fa-icon [icon]="faConfiguracion"></fa-icon><a routerLink="/configuracion">Configuración</a></li>
+                        <li (click)="cambiarIndice(8)"><fa-icon [icon]="faConfiguracion"></fa-icon><a routerLink="/configuracion">Configuración</a></li>
                         <li><fa-icon [icon]="faCerrarSesion"></fa-icon><a routerLink="/login">Cerrar Sesión</a></li>
                     </ul>
                 </div>
@@ -51,10 +51,11 @@
         <main [ngSwitch]="indice">
             <h1 *ngSwitchDefault>No implementado</h1>
             <app-detalle-plan *ngSwitchCase="0"></app-detalle-plan>
-            <app-planes-alimenticios *ngSwitchCase="1"></app-planes-alimenticios>
-            <app-planes-ejercicios *ngSwitchCase="2"></app-planes-ejercicios>
+            <app-planes *ngSwitchCase="1" [tipo]="1"></app-planes>
+            <app-planes *ngSwitchCase="2" [tipo]="2"></app-planes>
             <app-perfil-usuario *ngSwitchCase="7"></app-perfil-usuario>
-            
+
+            <app-profesionales *ngSwitchCase="3"></app-profesionales>
 
         </main>
     </div>
