--- a/HealthLife/src/app/Cliente/perfil-usuario/perfil-usuario.component.html
+++ b/HealthLife/src/app/Cliente/perfil-usuario/perfil-usuario.component.html
@@ -7,7 +7,7 @@
     <div class="contendor-general" class="row">
         <div class="col-md-4 border-right">
             <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-                <img class="rounded-circle mt-4" width="150px" src="../../../assets/img/cursos/usuario.jpeg">
+                <img class="rounded-circle mt-4" width="150px" src="../../../assets/img/inicio/person_2.jpg">
                 <br/>
                 <span class="font-weight-bold">Jordan Vera</span>
                 <span class="text-black-50">jverac12@uteq.edu.ec</span>
