--- a/HealthLife/src/app/inicio/inicio.component.html
+++ b/HealthLife/src/app/inicio/inicio.component.html
@@ -46,12 +46,12 @@
             <div class="row">
               <div class="col-lg-8 text-center text-lg-start">
                 <h1 data-aos="fade-right">¡La mejor aplicación web para la salud!</h1>
-                <p class="mb-5" data-aos="fade-right" data-aos-delay="100">HealthLife es la aplicación web ideal para poder llevar una salud alimenticia adecuada acompañada de rutinas de ejercicios. ¡Esta es tu mejor opción!</p>
-                <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a routerLink="/login" class="btn btn-outline-white">Empezar ahora <fa-icon [icon]="faFlechaEmpezar"></fa-icon></a></p>
+                <p class="mb-5" data-aos="fade-right" data-aos-duration="100">HealthLife es la aplicación web ideal para poder llevar una salud alimenticia adecuada acompañada de rutinas de ejercicios. ¡Esta es tu mejor opción!</p>
+                <p data-aos="fade-right" data-aos-duration="200" data-aos-offset="-500"><a routerLink="/login" class="btn btn-outline-white">Empezar ahora <fa-icon [icon]="faFlechaEmpezar"></fa-icon></a></p>
               </div>
               <div class="col-lg-4 iphone-wrap">
                 <img src="../../assets/img/inicio/phone_1.png" alt="Image" class="phone-1" data-aos="fade-right">
-                <img src="../../assets/img/inicio/phone_2.png" alt="Image" class="phone-2" data-aos="fade-right" data-aos-delay="500">
+                <img src="../../assets/img/inicio/phone_2.png" alt="Image" class="phone-2" data-aos="fade-right" data-aos-duration="500">
               </div>
             </div>
           </div>
@@ -72,7 +72,7 @@
           </div>
   
           <div class="row">
-            <div class="col-md-4" data-aos="fade-up" data-aos-delay="150">
+            <div class="col-md-4" data-aos="fade-up" data-aos-duration="1600">
               <div class="feature-1 text-center">
                 <div class="wrap-icon icon-1">
                   <fa-icon [icon]="faUsuarios"></fa-icon>
@@ -81,7 +81,7 @@
                 <p>Los usuarios tienen a disposición un chat para interactuar en tiempo real con su profesional encargado.</p>
               </div>
             </div>
-            <div class="col-md-4" data-aos="fade-up" data-aos-delay="250">
+            <div class="col-md-4" data-aos="fade-up" data-aos-duration="1600">
               <div class="feature-1 text-center">
                 <div class="wrap-icon icon-1">
                   <fa-icon [icon]="faLibros"></fa-icon>
@@ -90,7 +90,7 @@
                 <p>Todos los recursos como recetas de comidas, rutinas de ejercicios, y otros, están siempre a disposición del usuario.</p>
               </div>
             </div>
-            <div class="col-md-4" data-aos="fade-up" data-aos-delay="350">
+            <div class="col-md-4" data-aos="fade-up" data-aos-duration="1600">
               <div class="feature-1 text-center">
                 <div class="wrap-icon icon-1">
                   <fa-icon [icon]="faEstadisticas"></fa-icon>
@@ -115,26 +115,26 @@
         <div class="container">
           <div class="row justify-content-center text-center mb-5" data-aos="fade">
             <div class="col-md-6 mb-5">
-              <img src="../../assets/img/inicio/img-nuevo-miembro.svg" alt="Image" class="img-fluid" data-aos="flip-left" data-aos-delay="200" >
+              <img src="../../assets/img/inicio/img-nuevo-miembro.svg" alt="Image" class="img-fluid" data-aos="flip-left" data-aos-duration="1600" >
             </div>
           </div>
   
           <div class="row">
-            <div class="col-md-4" data-aos="zoom-in" data-aos-delay="750">
+            <div class="col-md-4" data-aos="zoom-in" data-aos-duration="1600">
               <div class="step">
                 <span class="number"><fa-icon [icon]="faRevisar"></fa-icon></span>
                 <h3>Revisa los planes</h3>
                 <p>Al empezar en HealthLife se te asignará un plan según tu condición física. También puedes elegir entre los que tenemos a disposición.</p>
               </div>
             </div>
-            <div class="col-md-4" data-aos="zoom-in" data-aos-delay="950">
+            <div class="col-md-4" data-aos="zoom-in" data-aos-duration="1600">
               <div class="step">
                 <span class="number"><fa-icon [icon]="faLista"></fa-icon></span>
                 <h3>Cumple las tareas</h3>
                 <p>En cada plan se especifica lo que debes comer  o la rutina de ejercicios a realizar, estas son consideradas tareas que debes cumplir.</p>
               </div>
             </div>
-            <div class="col-md-4" data-aos="zoom-in" data-aos-delay="1150">
+            <div class="col-md-4" data-aos="zoom-in" data-aos-duration="1600">
               <div class="step">
                 <span class="number"><fa-icon [icon]="faPremios"></fa-icon></span>
                 <h3>Gana premios</h3>
@@ -154,22 +154,22 @@
 
               <div class="row justify-content-center text-center mb-5">
                 <div class="col-md-12">
-                  <h2 class="section-heading" id="titulo-beneficios" data-aos="fade-right" data-aos-delay="800">Beneficios para los usuarios</h2>
+                  <h2 class="section-heading" id="titulo-beneficios" data-aos="fade-right" data-aos-duration="1600">Beneficios para los usuarios</h2>
                 </div>
               </div>
 
               <div class="caja-beneficios">
-                <h5 data-aos="fade-right" data-aos-delay="600"><fa-icon id="icono" [icon]="faRevisar"></fa-icon> Tomar cursos garantizados y verificados.</h5>
-                <h5 data-aos="fade-right" data-aos-delay="600"><fa-icon id="icono" [icon]="faRevisar"></fa-icon> Complementar los recursos con fuentes externas.</h5>
-                <h5 data-aos="fade-right" data-aos-delay="600"><fa-icon id="icono" [icon]="faRevisar"></fa-icon> Revisar los cursos en cualquier momento.</h5>
-                <h5 data-aos="fade-right" data-aos-delay="600"><fa-icon id="icono" [icon]="faRevisar"></fa-icon> Obtener resultados en un corto tiempo.</h5>
-                <h5 data-aos="fade-right" data-aos-delay="600"><fa-icon id="icono" [icon]="faRevisar"></fa-icon> Tener ayuda directa de profesionales.</h5>
+                <h5 data-aos="fade-right" data-aos-duration="1600"><fa-icon id="icono" [icon]="faRevisar"></fa-icon> Tomar cursos garantizados y verificados.</h5>
+                <h5 data-aos="fade-right" data-aos-duration="1600"><fa-icon id="icono" [icon]="faRevisar"></fa-icon> Complementar los recursos con fuentes externas.</h5>
+                <h5 data-aos="fade-right" data-aos-duration="1600"><fa-icon id="icono" [icon]="faRevisar"></fa-icon> Revisar los cursos en cualquier momento.</h5>
+                <h5 data-aos="fade-right" data-aos-duration="1600"><fa-icon id="icono" [icon]="faRevisar"></fa-icon> Obtener resultados en un corto tiempo.</h5>
+                <h5 data-aos="fade-right" data-aos-duration="1600"><fa-icon id="icono" [icon]="faRevisar"></fa-icon> Tener ayuda directa de profesionales.</h5>
                 <br/>
-                <a routerLink="/login" class="btn btn-primary" data-aos="fade-right" data-aos-delay="600">Empezar ahora <fa-icon [icon]="faFlechaEmpezar"></fa-icon></a>
+                <a routerLink="/login" class="btn btn-primary" data-aos="fade-right" data-aos-duration="1600">Empezar ahora <fa-icon [icon]="faFlechaEmpezar"></fa-icon></a>
               </div>
               
             </div>
-            <div class="col-md-6" data-aos="fade-left" data-aos-delay="600">
+            <div class="col-md-6" data-aos="fade-left" data-aos-duration="1600">
               <img src="../../assets/img/inicio/img-beneficio-usuarios.svg" alt="Image" class="img-fluid">
             </div>
           </div>
@@ -179,10 +179,10 @@
 
       <!-- Sección de las estadisticas (contadores de numeros que se incrementan) ======= -->
     <section id="stats-counter" class="stats-counter" id="estadisticas">
-      <div class="container" data-aos="zoom-out" data-aos-delay="800">
+      <div class="container" data-aos="zoom-out" data-aos-duration="1600">
 
         <div class="row justify-content-center text-center mb-5">
-          <div class="col-md-12" data-aos="zoom-out" data-aos-delay="800">
+          <div class="col-md-12" data-aos="zoom-out" data-aos-duration="1600">
             <h2 class="section-estadisticas" id="titulo-estadisticas">Dentro de nuestra aplicación contamos con:</h2>
           </div>
         </div>
@@ -224,7 +224,7 @@
     <section class="section" id="profesionales">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-md-4 ms-auto order-2" data-aos="fade-left" data-aos-delay="1000">
+          <div class="col-md-4 ms-auto order-2" data-aos="fade-left" data-aos-duration="1600">
             
             <div class="row justify-content-center text-center mb-5">
               <div class="col-md-12" data-aos="fade-up">
@@ -239,7 +239,7 @@
             <p><a routerLink="/login" class="btn btn-primary">Empezar ahora <fa-icon [icon]="faFlechaEmpezar"></fa-icon></a></p>
           </div>
           <div class="col-md-6" data-aos="fade-right">
-            <img src="../../assets/img/inicio/img-profesionales.svg" alt="Image" class="img-fluid" data-aos="fade-right" data-aos-delay="1000">
+            <img src="../../assets/img/inicio/img-profesionales.svg" alt="Image" class="img-fluid" data-aos="fade-right" data-aos-duration="1600">
           </div>
         </div>
       </div>
@@ -250,7 +250,7 @@
       <div class="container">
         <div class="row justify-content-center text-center mb-5">
           <div class="col-md-8">
-            <h2 class="section-heading" data-aos="fade-up" data-aos-duration="2000">Experiencias de los usuarios</h2>
+            <h2 class="section-heading" data-aos="fade-up" data-aos-duration="1600">Experiencias de los usuarios</h2>
           </div>
         </div>
         <div class="row justify-content-center text-center">
@@ -259,7 +259,7 @@
             <div class="testimonials-slider swiper">
               <div class="swiper-wrapper">
 
-                <div class="swiper-slide" data-aos="fade-up" data-aos-duration="3000">
+                <div class="swiper-slide" data-aos="fade-up" data-aos-duration="1600">
                   <div class="review text-center">
                     <p class="stars">
                       <span class="bi bi-star-fill"></span>
@@ -285,7 +285,7 @@
                   </div>
                 </div><!-- End testimonial item -->
 
-                <div class="swiper-slide" data-aos="fade-up" data-aos-duration="2000">
+                <div class="swiper-slide" data-aos="fade-up" data-aos-duration="1600">
                   <div class="review text-center">
                     <p class="stars">
                       <span class="bi bi-star-fill"></span>
@@ -312,7 +312,7 @@
                   </div>
                 </div><!-- End testimonial item -->
 
-                <div class="swiper-slide" data-aos="fade-up" data-aos-duration="2000">
+                <div class="swiper-slide" data-aos="fade-up" data-aos-duration="1600">
                   <div class="review text-center">
                     <p class="stars">
                       <span class="bi bi-star-fill"></span>
@@ -352,11 +352,11 @@
     <section class="section cta-section">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-md-6 me-auto text-center text-md-start mb-5 mb-md-0" data-aos="fade-right" data-aos-delay="1000">
+          <div class="col-md-6 me-auto text-center text-md-start mb-5 mb-md-0" data-aos="fade-right" data-aos-duration="1600">
             <h2>¡Próximamente! Disponible en:</h2>
           </div>
           <div class="col-md-5 text-center text-md-end">
-            <p data-aos="fade-left" data-aos-delay="1000"><a href="https://play.google.com/store/games" class="btn d-inline-flex align-items-center"><fa-icon [icon]="faPlayStore"></fa-icon><span> ⠀⠀Google Play</span></a> </p>
+            <p data-aos="fade-left" data-aos-duration="1600"><a href="https://play.google.com/store/games" class="btn d-inline-flex align-items-center"><fa-icon [icon]="faPlayStore"></fa-icon><span> ⠀⠀Google Play</span></a> </p>
           </div>
         </div>
       </div>
