--- a/HealthLife/src/app/Cliente/profesionales/profesionales.component.html
+++ b/HealthLife/src/app/Cliente/profesionales/profesionales.component.html
@@ -1,5 +1,11 @@
 <body>
-    <div class="box-courses-wrapper">
+    <ng-template #detallesplan>
+        <div class="boton-regresar" (click)="cambiarComponente(false)">
+            <input type="submit" value="Volver" class="btn-Volver" id="iniciar"> 
+        </div>
+        <app-planes></app-planes>
+    </ng-template>
+    <div *ngIf="!detalle; else detallesplan" class="box-courses-wrapper">
 
         <!--Card que muestra el perfil de los profesionales-->
         <div class="card swiper-slide" *ngFor="let element of profesionales">
@@ -12,18 +18,13 @@
             </div>
 
             <div class="card-content">
-                <h2 class="name">David Dell</h2>
-                <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+                <h2 class="name">{{element.nombres+' '+element.apellidos}}</h2>
+                <p class="description">{{element.descripcion}}</p>
 
-                <button (click)="cambiarComponente(true); cambiarIndice(element.id)" class="button">Ver curso  <fa-icon [icon]="faFlecha" id="logo-menu"></fa-icon> </button>
+                <button (click)="cambiarComponente(true); cambiarIndice(element.id_profesional)" class="button">Ver curso  <fa-icon [icon]="faFlecha" id="logo-menu"></fa-icon> </button>
             </div>
         </div>
     </div>
 
-    <ng-template #detallesplan>
-        <div class="boton-regresar" (click)="cambiarComponente(false)">
-            <input type="submit" value="Volver" class="btn-Volver" id="iniciar"> 
-        </div>
-        <app-detalle-plan [idplan]="indice"></app-detalle-plan>
-    </ng-template>
+    
 </body>
