--- a/HealthLife/src/app/Cliente/planes/planes.component.html
+++ b/HealthLife/src/app/Cliente/planes/planes.component.html
@@ -2,7 +2,7 @@
 <body>
     <div class="box-courses-wrapper" *ngIf="!detalle; else detallesplan ">
        <!--El que se debe esconder al poner el detalle--> 
-        <div class="box-row" *ngFor="let element of planes">
+        <div class="box-row" *ngFor="let element of planes" data-aos="fade-up" data-aos-duration="1100">
             <div class="box-info">
                 <div class="course">
                     <div class="course-img">
