--- a/HealthLife/src/app/Cliente/perfil-usuario/perfil-usuario.component.html
+++ b/HealthLife/src/app/Cliente/perfil-usuario/perfil-usuario.component.html
@@ -44,10 +44,10 @@
                         <label class="labels" style="font-size: 16px;">Email:</label>
                         <input style="font-size: 14px;" type="text" class="form-control" placeholder="usuario@uteq.edu.ec" value="">
                     </div>
-                    <div class="col-md-12">
+                    <!--<div class="col-md-12">
                         <label class="labels" style="font-size: 16px;">Contraseña:</label>
                         <input style="font-size: 14px;" type="password" class="form-control" value="">
-                    </div>
+                    </div>-->
                 </div>
 
                 <div class="row mt-4">
