--- a/HealthLife/src/app/Cliente/profesionales/profesionales.component.html
+++ b/HealthLife/src/app/Cliente/profesionales/profesionales.component.html
@@ -1,11 +1,4 @@
 <body>
-    <ng-template #detallesplan>
-        <div class="boton-regresar" (click)="cambiarComponente(false)">
-            <input type="submit" value="Volver" class="btn-Volver" id="iniciar"> 
-        </div>
-        <app-planes></app-planes>
-    </ng-template>
-
     <div *ngIf="!detalle; else detallesplan" class="box-courses-wrapper">
         <!--Card que muestra el perfil de los profesionales-->
         <div class="card swiper-slide" *ngFor="let element of profesionales" data-aos="fade-up" data-aos-duration="1000">
@@ -21,10 +14,18 @@
                 <p class="rol">{{element.rol}}</p>
                 <p class="description">{{element.descripcion}}</p>
 
-                <button (click)="cambiarComponente(true); cambiarIndice(element.id_profesional)" class="button">Ver curso  <fa-icon [icon]="faFlecha" id="logo-menu"></fa-icon> </button>
+                <button (click)="cambiarComponente(true); cambiarIndice(element.id_profesional)" class="submit">Ver curso  <fa-icon [icon]="faFlecha" id="logo-menu"></fa-icon> </button>
             </div>
         </div>
     </div>
+
+
+    <ng-template #detallesplan>
+        <div class="boton-regresar" (click)="cambiarComponente(false)">
+            <input type="submit" value="Volver" class="btn-Volver" id="iniciar"> 
+        </div>
+        <app-planes [id]="indice"></app-planes>
+    </ng-template>
 
     
 </body>
