Correcion de errores

--- a/HealthLife/src/app/Cliente/dashboard/dashboard.component.html
+++ b/HealthLife/src/app/Cliente/dashboard/dashboard.component.html
@@ -62,7 +62,9 @@
             </div> 
             
             <ng-template #profesional>
-                <h1 *ngSwitchCase="0"> Profesionales </h1>
+                <h1 *ngSwitchCase="0"> Inicio </h1>
+                <app-planes-admin-profesionales *ngSwitchCase="1"></app-planes-admin-profesionales>
+                <app-perfil-profesional *ngSwitchCase="2"></app-perfil-profesional>
             </ng-template>
             <h1 *ngSwitchDefault>No implementado</h1>
 
