--- a/HealthLife/src/app/Profesional/planes-admin-profesionales/planes-admin-profesionales.component.html
+++ b/HealthLife/src/app/Profesional/planes-admin-profesionales/planes-admin-profesionales.component.html
@@ -119,7 +119,7 @@
 </aside>
 <!-- /.control-sidebar -->
 <div class="modal fade" id="agregarPlanes" tabindex="-1" aria-labelledby="agregarPlanesLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Cree un nuevo plan</h5>
