--- a/HealthLife/src/app/Cliente/dashboard/dashboard.component.html
+++ b/HealthLife/src/app/Cliente/dashboard/dashboard.component.html
@@ -52,10 +52,10 @@
         <main [ngSwitch]="indice">
             <!--*ngIf="rolUsuario == 'cliente'; else profesional"-->
             <div *ngIf="this.rolUsuario == 'cliente'; else profesional">
-                <h1 *ngSwitchDefault>No implementado</h1>
+                <app-planes *ngSwitchCase="0"></app-planes>
                 <!-- <app-detalle-plan *ngSwitchCase="0"></app-detalle-plan> -->
-                <app-planes *ngSwitchCase="1" [tipo]="1"></app-planes>
-                <app-planes *ngSwitchCase="2" [tipo]="2"></app-planes>
+                <app-planes *ngSwitchCase="1" [tipo]="2"></app-planes>
+                <app-planes *ngSwitchCase="2" [tipo]="1"></app-planes>
                 <app-perfil-usuario *ngSwitchCase="7"></app-perfil-usuario>
                 <app-profesionales *ngSwitchCase="3"></app-profesionales>
                 <app-actividades *ngSwitchCase="4"></app-actividades>
