diseño de clientes suscritos; arreglo de funciones en el backend

--- a/HealthLife/src/app/Cliente/dashboard/dashboard.component.html
+++ b/HealthLife/src/app/Cliente/dashboard/dashboard.component.html
@@ -65,6 +65,7 @@
                 <h1 *ngSwitchCase="0"> Inicio </h1>
                 <app-planes-admin-profesionales *ngSwitchCase="1"></app-planes-admin-profesionales>
                 <app-perfil-profesional *ngSwitchCase="2"></app-perfil-profesional>
+                <app-clientes-admin-profesionales *ngSwitchCase="3"></app-clientes-admin-profesionales>
             </ng-template>
             <h1 *ngSwitchDefault>No implementado</h1>
 
