--- a/HealthLife/src/app/Cliente/perfil-usuario/perfil-usuario.component.html
+++ b/HealthLife/src/app/Cliente/perfil-usuario/perfil-usuario.component.html
@@ -32,17 +32,17 @@
                 <div class="row mt-2">
                     <div class="col-md-6">
                         <label class="labels" style="font-size: 16px;">Nombres:</label>
-                        <input style="font-size: 14px;" type="text" class="form-control" placeholder="Jordan Fabian" value="">
+                        <input style="font-size: 14px;" type="text" class="form-control" placeholder="Jordan Fabian" [value]="datos.nombres">
                     </div>
                     <div class="col-md-6"><label class="labels" style="font-size: 16px;">Apellidos:</label>
-                        <input style="font-size: 14px;" type="text" class="form-control" value="" placeholder="Vera Coello">
+                        <input style="font-size: 14px;" type="text" class="form-control" [value]="datos.apellidos" placeholder="Vera Coello">
                     </div>
                 </div>
 
                 <div class="row mt-4">
                     <div class="col-md-12">
                         <label class="labels" style="font-size: 16px;">Email:</label>
-                        <input style="font-size: 14px;" type="text" class="form-control" placeholder="usuario@uteq.edu.ec" value="">
+                        <input style="font-size: 14px;" type="text" class="form-control" placeholder="usuario@uteq.edu.ec" [value]="datos.correo">
                     </div>
                     <!--<div class="col-md-12">
                         <label class="labels" style="font-size: 16px;">Contraseña:</label>
@@ -53,11 +53,11 @@
                 <div class="row mt-4">
                     <div class="col-md-6">
                         <label style="font-size: 16px;" class="labels">Estatura (metros):</label>
-                        <input style="font-size: 14px;" type="number" class="form-control" placeholder="1.70" value="">
+                        <input style="font-size: 14px;" type="number" class="form-control" placeholder="1.70" [value]="datos.talla">
                     </div>
                     <div class="col-md-6">
                         <label style="font-size: 16px;" class="labels">Peso (Kilogramos):</label>
-                        <input style="font-size: 14px;" type="number" class="form-control" value="" placeholder="55">
+                        <input style="font-size: 14px;" type="number" class="form-control" [value]="datos.peso" placeholder="55">
                     </div>
                 </div>
 
@@ -77,16 +77,16 @@
 
                     <div class="col-md-12">
                         <label style="font-size: 16px;" class="labels">Hábitos:</label>
-                        <input style="font-size: 14px;" type="text" class="form-control" placeholder="Bebedor, lector, ciclismo.." value="">
+                        <input style="font-size: 14px;" type="text" class="form-control" placeholder="Bebedor, lector, ciclismo.." [value]="datos.habitos">
                     </div>
 
                     <div class="col-md-12">
                         <label style="font-size: 16px;" class="labels">Alergias:</label>
-                        <input style="font-size: 14px;" type="text" class="form-control" placeholder="Polvo, humo.." value="">
+                        <input style="font-size: 14px;" type="text" class="form-control" placeholder="Polvo, humo.." [value]="datos.alergias">
                     </div>
                     <div class="col-md-12">
                         <label style="font-size: 16px;" class="labels">Enfermedades:</label>
-                        <input style="font-size: 14px;" type="text" class="form-control" placeholder="Migraña, gastritis.." value="">
+                        <input style="font-size: 14px;" type="text" class="form-control" placeholder="Migraña, gastritis.." [value]="datos.enfermedades">
                     </div>
                 </div>
 
@@ -95,7 +95,7 @@
                     <div class="col-md-6"><label class="labels">State/Region</label><input type="text" class="form-control" value="" placeholder="state"></div>
                 </div>-->
 
-                <div class="mt-5 text-center" style="width: 100%;">
+                <div class="mt-5 text-center" style="width: 100%;" *ngIf="this.id==null">
                     <button style="width: 30%" class="btn btn-primary profile-button" type="button">Guardar</button>
                 </div>
             </div>
