--- a/HealthLife/src/app/Cliente/perfil-usuario/perfil-usuario.component.html
+++ b/HealthLife/src/app/Cliente/perfil-usuario/perfil-usuario.component.html
@@ -1,9 +1,4 @@
 <body>
-
-    <div class="boton-regresar">
-        <input type="submit" value="Volver" class="btn-Volver" id="iniciar"> 
-    </div>
-
     <div class="contendor-general" class="row">
         <div class="col-md-4 border-right">
             <div class="d-flex flex-column align-items-center text-center p-3 py-5">
@@ -12,21 +7,17 @@
                 <span class="font-weight-bold">Jordan Vera</span>
                 <span class="text-black-50">jverac12@uteq.edu.ec</span>
                 <span> Cliente</span>
-            </div>
-            
-            <!--<div class="col-md-4">
-                <div class="p-3 py-5">
-                    <div class="d-flex justify-content-between align-items-center experience"><span>Edit Experience</span><span class="border px-3 p-1 add-experience"><i class="fa fa-plus"></i>&nbsp;Experience</span></div><br>
-                    <div class="col-md-12"><label class="labels">Experience in Designing</label><input type="text" class="form-control" placeholder="experience" value=""></div> <br>
-                    <div class="col-md-12"><label class="labels">Additional Details</label><input type="text" class="form-control" placeholder="additional details" value=""></div>
+
+                <div class="mt-3 text-center" style="width: 100%;">
+                    <button style="width: 50%" class="btn btn-primary profile-button" type="button" (click)="mensajeMantenimiento()">Añadir foto</button>
                 </div>
-            </div>-->
+            </div>
         </div>
         
         <div class="col-md-7 border-right">
             <div class="p-3 py-5">
                 <div class="d-flex justify-content-between align-items-center mb-3">
-                    <h4 style="font-size: 30px;" class="text-right">Mi perfil</h4>
+                    <h4 style="font-size: 30px;" style="margin-left: 10px;" class="text-right">Mi perfil</h4>
                 </div>
 
                 <div class="row mt-2">
@@ -44,10 +35,6 @@
                         <label class="labels" style="font-size: 16px;">Email:</label>
                         <input style="font-size: 14px;" type="text" class="form-control" placeholder="usuario@uteq.edu.ec" [value]="datos.correo">
                     </div>
-                    <!--<div class="col-md-12">
-                        <label class="labels" style="font-size: 16px;">Contraseña:</label>
-                        <input style="font-size: 14px;" type="password" class="form-control" value="">
-                    </div>-->
                 </div>
 
                 <div class="row mt-4">
@@ -62,42 +49,29 @@
                 </div>
 
                 <div class="row mt-1">
-                    <div class="col-md-12">
+                    <div class="mt-3 col-md-12">
                         <label style="font-size: 16px;" class="labels">Sexo:</label>
-                        <select 
-                            style="font-size: 14px;"
-                            name="rol-profesional"
-                            class="form-control"
-                            formControlName="sexo">
-                            <option value="seleccione-genero" selected disabled>Seleccione su género</option>
-                            <option value="masculino">Masculino</option>
-                            <option value="femenino">Femenino</option>
-                        </select>
+                        <input style="font-size: 14px;" type="text" class="form-control" [value]="datos.sexo" >
                     </div>
 
-                    <div class="col-md-12">
+                    <div class="mt-3 col-md-12">
                         <label style="font-size: 16px;" class="labels">Hábitos:</label>
-                        <input style="font-size: 14px;" type="text" class="form-control" placeholder="Bebedor, lector, ciclismo.." [value]="datos.habitos">
+                        <input style="font-size: 14px;" type="text" class="form-control" [value]="datos.habitos">
                     </div>
 
-                    <div class="col-md-12">
+                    <div class=" mt-3 col-md-12">
                         <label style="font-size: 16px;" class="labels">Alergias:</label>
-                        <input style="font-size: 14px;" type="text" class="form-control" placeholder="Polvo, humo.." [value]="datos.alergias">
+                        <input style="font-size: 14px;" type="text" class="form-control" [value]="datos.alergias">
                     </div>
-                    <div class="col-md-12">
+                    <div class="mt-3 col-md-12">
                         <label style="font-size: 16px;" class="labels">Enfermedades:</label>
-                        <input style="font-size: 14px;" type="text" class="form-control" placeholder="Migraña, gastritis.." [value]="datos.enfermedades">
+                        <input style="font-size: 14px;" type="text" class="form-control" [value]="datos.enfermedades">
                     </div>
                 </div>
 
-                <!--<div class="row mt-3">
-                    <div class="col-md-6"><label class="labels">Country</label><input type="text" class="form-control" placeholder="country" value=""></div>
-                    <div class="col-md-6"><label class="labels">State/Region</label><input type="text" class="form-control" value="" placeholder="state"></div>
-                </div>-->
-
-                <div class="mt-5 text-center" style="width: 100%;" *ngIf="this.id==null">
+                <!--<div class="mt-5 text-center" style="width: 100%;" *ngIf="this.id==null">
                     <button style="width: 30%" class="btn btn-primary profile-button" type="button">Guardar</button>
-                </div>
+                </div>-->
             </div>
         </div>
     </div>
