--- a/HealthLife/src/app/Cliente/planes/planes.component.html
+++ b/HealthLife/src/app/Cliente/planes/planes.component.html
@@ -14,7 +14,7 @@
                             <p><a href="#"> <b>{{element.nombre}}</b></a></p>
                             </div>
                         <div class="course-author">
-                            <p><b>Por:</b> {{element.id}}</p>
+                            <p><b>Por:</b> {{element.nombres}}</p>
                         </div>
                         <div class="course-desc">
                             <p>{{element.objetivos}}</p>
